--- a/apache-commons-sl/pom.xml
+++ b/apache-commons-sl/pom.xml
@@ -21,6 +21,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 		<!-- Maven dependencies -->
+		<exec-maven-plugin.version>1.2.1</exec-maven-plugin.version>
 		<maven-assembly-plugin.version>3.1.0</maven-assembly-plugin.version>
 		<maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
 		<maven-eclipse-plugin.version>2.10</maven-eclipse-plugin.version>
@@ -41,6 +42,22 @@
 				</configuration>
 			</plugin>
 
+			<!-- Run main -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>${exec-maven-plugin.version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>java</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<mainClass>com.pduleba.apache.commons.sl.rng.RNG</mainClass>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
